# workshop-fun-ocaml

./: .gitignore  Makefile  README.md  dune  dune-project  package-lock.json  package.json  workshop.opam
lib/: app.mlx  dune  hello.mlx
src/: build.mjs  client.mlx  dune  fat_client.mlx  server.mlx
